RuleEngineService works.